src/model/snapshots/dart_typegen__model__tests__can_parse_example.snap
---
source: src/model/tests.rs
expression: config
---
Config {
    items: [
        Class(
            Class {
                name: "Foo",
                fields: [
                    Field {
                        name: "name",
                        ty: "String",
                    },
                    Field {
                        name: "age",
                        ty: "int",
                    },
                ],
                extra_dart: [
                    ExtraDart {
                        text: "void printMe() => print((name, age));",
                    },
                ],
            },
        ),
    ],
}
