src/model/snapshots/dart_typegen__model__tests__class_docs.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        48,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                90,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                99,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: Some(
                SpannedScalar {
                    value: "Single line docs",
                    span: SourceSpan {
                        offset: SourceOffset(
                            63,
                        ),
                        length: 18,
                    },
                },
            ),
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Bar",
                span: SourceSpan {
                    offset: SourceOffset(
                        117,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                177,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                186,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: Some(
                SpannedScalar {
                    value: "\nMulti line docs\n\nMore stuff\n  ",
                    span: SourceSpan {
                        offset: SourceOffset(
                            132,
                        ),
                        length: 36,
                    },
                },
            ),
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
