src/model/snapshots/dart_typegen__model__tests__class_extra_dart.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        54,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                70,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                79,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: Some(
                SpannedScalar {
                    value: "\n    void baz() {\n      print(x);\n    }\n  ",
                    span: SourceSpan {
                        offset: SourceOffset(
                            102,
                        ),
                        length: 47,
                    },
                },
            ),
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
