src/model/snapshots/dart_typegen__model__tests__class_field_default.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        57,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                73,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                82,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: Some(
                        Value {
                            type_name: None,
                            literal: Spanned {
                                span: Span(
                                    109,
                                    116,
                                ),
                                value: String(
                                    "hello",
                                ),
                            },
                        },
                    ),
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
                Field {
                    name: SpannedScalar {
                        value: "y",
                        span: SourceSpan {
                            offset: SourceOffset(
                                130,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "int",
                        span: SourceSpan {
                            offset: SourceOffset(
                                139,
                            ),
                            length: 5,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: Some(
                        SpannedScalar {
                            value: "123 + 234",
                            span: SourceSpan {
                                offset: SourceOffset(
                                    168,
                                ),
                                length: 11,
                            },
                        },
                    ),
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
