src/model/snapshots/dart_typegen__model__tests__class_with_class_field.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        87,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                103,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                112,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
                Field {
                    name: SpannedScalar {
                        value: "bar",
                        span: SourceSpan {
                            offset: SourceOffset(
                                129,
                            ),
                            length: 5,
                        },
                    },
                    ty: SpannedScalar {
                        value: "Bar",
                        span: SourceSpan {
                            offset: SourceOffset(
                                140,
                            ),
                            length: 5,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Bar",
                span: SourceSpan {
                    offset: SourceOffset(
                        155,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                171,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                180,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
                Field {
                    name: SpannedScalar {
                        value: "bar",
                        span: SourceSpan {
                            offset: SourceOffset(
                                197,
                            ),
                            length: 5,
                        },
                    },
                    ty: SpannedScalar {
                        value: "Bar",
                        span: SourceSpan {
                            offset: SourceOffset(
                                208,
                            ),
                            length: 5,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
