src/model/snapshots/dart_typegen__model__tests__default_field_case.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: Some(
        Defaults {
            generate_to_string: None,
            generate_equals: None,
            dart_format_language_version: None,
            class: None,
            union: None,
            enum: None,
            field: Some(
                FieldOptions {
                    json_key_case: Some(
                        SpannedScalar {
                            value: Camel,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    91,
                                ),
                                length: 7,
                            },
                        },
                    ),
                },
            ),
        },
    ),
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        112,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "multipleWords",
                        span: SourceSpan {
                            offset: SourceOffset(
                                128,
                            ),
                            length: 15,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                149,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
                Field {
                    name: SpannedScalar {
                        value: "evenMoreMultipleWords",
                        span: SourceSpan {
                            offset: SourceOffset(
                                166,
                            ),
                            length: 23,
                        },
                    },
                    ty: SpannedScalar {
                        value: "String",
                        span: SourceSpan {
                            offset: SourceOffset(
                                195,
                            ),
                            length: 8,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
