src/model/snapshots/dart_typegen__model__tests__default_sealed_unions.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: Some(
        Defaults {
            generate_to_string: None,
            generate_equals: None,
            dart_format_language_version: None,
            class: None,
            union: Some(
                UnionOptions {
                    sealed: Some(
                        SpannedScalar {
                            value: true,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    75,
                                ),
                                length: 4,
                            },
                        },
                    ),
                    json_discriminant: None,
                    annotations: None,
                    builder_annotations: None,
                },
            ),
            enum: None,
            field: None,
        },
    ),
    enums: [],
    classes: [],
    unions: [
        Union {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        93,
                    ),
                    length: 5,
                },
            },
            sealed: None,
            json_discriminant: None,
            json_discriminant_value_case: None,
            annotations: None,
            builder_annotations: None,
            docs: None,
            classes: [
                Class {
                    span: Span(
                        0,
                        0,
                    ),
                    name: SpannedScalar {
                        value: "X",
                        span: SourceSpan {
                            offset: SourceOffset(
                                109,
                            ),
                            length: 3,
                        },
                    },
                    allow_non_pascal_case: None,
                    fields: [],
                    docs: None,
                    json_key_case: None,
                    json_discriminant_value: None,
                    annotations: None,
                    builder_annotations: None,
                    extra_dart: None,
                    builder_extra_dart: None,
                },
                Class {
                    span: Span(
                        0,
                        0,
                    ),
                    name: SpannedScalar {
                        value: "Y",
                        span: SourceSpan {
                            offset: SourceOffset(
                                121,
                            ),
                            length: 3,
                        },
                    },
                    allow_non_pascal_case: None,
                    fields: [],
                    docs: None,
                    json_key_case: None,
                    json_discriminant_value: None,
                    annotations: None,
                    builder_annotations: None,
                    extra_dart: None,
                    builder_extra_dart: None,
                },
            ],
            extra_dart: [],
        },
    ],
}
