src/model/snapshots/dart_typegen__model__tests__empty.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [],
    unions: [],
}
