src/model/snapshots/dart_typegen__model__tests__enum_docs.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [
        Enum {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        27,
                    ),
                    length: 5,
                },
            },
            docs: Some(
                SpannedScalar {
                    value: "\nMulti line comment\n\nMore stuff\n  ",
                    span: SourceSpan {
                        offset: SourceOffset(
                            42,
                        ),
                        length: 39,
                    },
                },
            ),
            annotations: None,
            extra_dart: None,
            variants: [
                EnumVariant {
                    name: SpannedScalar {
                        value: "a",
                        span: SourceSpan {
                            offset: SourceOffset(
                                93,
                            ),
                            length: 3,
                        },
                    },
                    docs: Some(
                        SpannedScalar {
                            value: "single line comment",
                            span: SourceSpan {
                                offset: SourceOffset(
                                    108,
                                ),
                                length: 21,
                            },
                        },
                    ),
                    json_value: None,
                },
                EnumVariant {
                    name: SpannedScalar {
                        value: "b",
                        span: SourceSpan {
                            offset: SourceOffset(
                                145,
                            ),
                            length: 3,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
            ],
        },
    ],
    classes: [],
    unions: [],
}
