src/model/snapshots/dart_typegen__model__tests__enum_extra_dart.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [
        Enum {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        33,
                    ),
                    length: 5,
                },
            },
            docs: None,
            annotations: None,
            extra_dart: Some(
                SpannedScalar {
                    value: "\n    void foo() => print(this);\n  ",
                    span: SourceSpan {
                        offset: SourceOffset(
                            83,
                        ),
                        length: 39,
                    },
                },
            ),
            variants: [
                EnumVariant {
                    name: SpannedScalar {
                        value: "a",
                        span: SourceSpan {
                            offset: SourceOffset(
                                51,
                            ),
                            length: 3,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
                EnumVariant {
                    name: SpannedScalar {
                        value: "b",
                        span: SourceSpan {
                            offset: SourceOffset(
                                65,
                            ),
                            length: 3,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
            ],
        },
    ],
    classes: [],
    unions: [],
}
